--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <link rel="stylesheet" href="output.css" media="screen" title="no title">
   </head>
   <body>
-    <p> asdihsdfk </p>
+    <nav id="we">
+      <ul>
+        <li><a href="#"> dfshubgis <a/></li>
+        <li> kojmokgmghod </li>
+        <li> dfghudfhgj </li>
+      </ul>
+    </nav>
+
+    <p class="message"> message </p>
+    <p class="success">success</p>
+    <p class="error">error</p>
+    <p class="warning">warning</p>
+
+    <img class="box" src="https://www.royalcanin.com/~/media/Royal-Canin/Product-Categories/cat-adult-landing-hero.ashx" alt="">
+
+    <div class="container">
+      <article role="main">
+        fdgiudiosufgidsfgiudsfg
+      </article>
+      <aside role="complementary">
+        difgihdsbnbnfbjn
+      </aside>
+    </div>
+
   </body>
 </html>
